third_party/move/move-compiler-v2/tests/checking/typing/assign_wrong_arity.exp

Diagnostics:
error: the left-hand side has 3 items but the right-hand side provided 0
  ┌─ tests/checking/typing/assign_wrong_arity.move:7:9
  │
7 │         x = (0, 1, 2);
  │         ^

error: cannot assign `integer` to left-hand side of type `()`
  ┌─ tests/checking/typing/assign_wrong_arity.move:8:9
  │
8 │         () = 0;
  │         ^^

error: the left-hand side has 3 items but the right-hand side provided 4
   ┌─ tests/checking/typing/assign_wrong_arity.move:11:9
   │
11 │         (x, b, R{f}) = (0, false, R{f: 0}, R{f: 0});
   │         ^^^^^^^^^^^^

error: the left-hand side has 3 items but the right-hand side provided 2
   ┌─ tests/checking/typing/assign_wrong_arity.move:12:9
   │
12 │         (x, b, R{f}) = (0, false);
   │         ^^^^^^^^^^^^
